\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
\newcommand{\Rlogo}{\if{html}{\figure{../../html/logo.jpg}}\if{latex}{\figure{logo.jpg}{options: width=0.5in}}}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\name{NEWS}
\title{ R News}
\encoding{UTF-8}

\section{\Rlogo CHANGES IN R-devel}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Placeholder.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item The behaviour of \code{unlink(recursive = TRUE)} for a
      symbolic link to a directory has changed: it now removes the link
      rather than the directory contents (just as \command{rm -r} does).

      On Windows it no longer follows reparse points (including
      junctions and symbolic links).
    }
  }
  
  \subsection{NEW FEATURES}{
    \itemize{
      \item Environment variable \env{RD2DVI_INPUTENC} has been renamed
      to \env{RD2PDF_INPUTENC}.

      \item \code{.Deprecated()} becomes a bit more flexible, getting an
      \code{old} argument.

      \item Even data-only packages without \R code need a namespace and
      so may need to be installed under \R 2.14.0 or later.

      \item \code{assignInNamespace()} has further restrictions on use
      apart from at top-level, as its help page has warned.
      Expect it to be disabled from programmatic use in the future.

      \item \code{system()} and \code{system2()} when capturing output
      report a non-zero status in the new \code{"status"} attribute.

      \item \code{kronecker()} now has an S4 generic in package
      \pkg{methods} on which packages can set methods.  It will be
      invoked by \code{X \%x\% Y} if either \code{X} or \code{Y} is an S4
      object.

      \item \code{pdf()} accepts forms like \code{file = "|lpr"} in the
      same way as \code{postscript()}.

      \item \code{pdf()} accepts \code{file = NULL}.