@@ -66,44 +66,30 @@ lsfit <- function(x, y, wt=NULL, intercept=TRUE, tolerance=1e-07, yname=NULL)
 	if(nwts != nry)
             stop(gettextf("number of weights = %d should equal %d (number of responses)", nwts, nry), domain = NA)
 	wtmult <- wt^0.5
-	if( any(wt==0) ) {
-	    xzero <- as.matrix(x)[wt==0, ]
-	    yzero <- as.matrix(y)[wt==0, ]
+	if(any(wt == 0)) {
+	    xzero <- as.matrix(x)[wt == 0, ]
+	    yzero <- as.matrix(y)[wt == 0, ]
 	}
 	x <- x*wtmult
 	y <- y*wtmult
-	invmult <- 1/ifelse(wt==0, 1, wtmult)
+	invmult <- 1/ifelse(wt == 0, 1, wtmult)
     }
 
     ## call linpack
 
     storage.mode(x) <- "double"
     storage.mode(y) <- "double"
-    z <- .Fortran("dqrls",
-		  qr=x,
-		  n=nrx,
-		  p=ncx,
-		  y=y,
-		  ny=ncy,
-		  tol=tolerance,
-		  coefficients=mat.or.vec(ncx, ncy),
-		  residuals=mat.or.vec(nrx, ncy),
-		  effects=mat.or.vec(nrx, ncy),
-		  rank=integer(1L),
-		  pivot=as.integer(1L:ncx),
-		  qraux=double(ncx),
-		  work=double(2*ncx),
-                  PACKAGE="base")
+    z <- .Call(C_Cdqrls, x, y, tolerance)
 
     ## dimension and name output from linpack
 
     resids <- array(NA, dim=dimy)
     dim(z$residuals) <- c(nry, ncy)
     if(!is.null(wt)) {
-	if(any(wt==0)) {
-	    if(ncx==1) fitted.zeros <- xzero * z$coefficients
+	if(any(wt == 0)) {
+	    if(ncx == 1L) fitted.zeros <- xzero * z$coefficients
 	    else fitted.zeros <- xzero %*% z$coefficients
-	    z$residuals[wt==0, ] <- yzero - fitted.zeros
+	    z$residuals[wt == 0, ] <- yzero - fitted.zeros
 	}
 	z$residuals <- z$residuals*invmult
     }
@@ -141,8 +127,8 @@ lsfit <- function(x, y, wt=NULL, intercept=TRUE, tolerance=1e-07, yname=NULL)
 
     ## return rest of output
 
-    rqr <- list(qt=z$effects, qr=z$qr, qraux=z$qraux, rank=z$rank,
-		pivot=z$pivot, tol=z$tol)
+    rqr <- list(qt = drop(z$effects), qr = z$qr, qraux = z$qraux, rank = z$rank,
+		pivot = z$pivot, tol = z$tol)
     oldClass(rqr) <- "qr"
     output <- c(output, list(intercept=intercept, qr=rqr))
     return(output)
